Fix: card container spacing

--- a/src/styles/layouts/_travel-point.scss
+++ b/src/styles/layouts/_travel-point.scss
@@ -94,7 +94,7 @@
         grid-template-columns: 1fr;
         gap: 1rem;
         width: 100%;
-        margin-top: 1.5rem;
+        margin-top: 1rem;
         max-width: 50rem;
 
         @include respond-to(md) {
